--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Автопоиск совпадений</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Автопоиск совпадений при вводе</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+  <body>
+    <div class="wrapper">
+      <h2>Автопоиск совпадений</h2>
+      <form class="form">
+        <input type="text" class="search" placeholder="Название станции..." />
+        <ul class="options">
+          <li>станция</li>
+        </ul>
+      </form>
+    </div>
 
-<body> 
-  <div class="wrapper">
-    <h2>Автопоиск совпадений</h2>
-    <form class="form">
-      <input type="text" class="search" placeholder="Название станции..." />
-      <ul class="options">
-        <li>станция</li>
-      </ul>
-    </form>
-  </div>
-  
-  <script src='./code.js'></script>
-</body>
+    <script src="./code.js"></script>
+  </body>
 </html>
